# python-screenplay-automation

./: LICENSE  README.md  pyproject.toml
.github/worflows/: ci.yml
screenplay/: actor.py
screenplay/abilities/: call_api.py
screenplay/assertions/: matchers.py  see_that.py
screenplay/questions/: base_question.py  response_json.py  response_status.py
screenplay/tasks/: base_task.py  login_user.py  register_user.py
tests/api/: test_api_admin.py
tests/api_tests/: conftest.py  test_login.py  test_registration.py
tests/screenplay/actors/: actor.py
tests/screenplay/assertions/: matchers.py
tests/screenplay/tasks/: login_user.py  register_user.py
