[project]
name = "screenplay-automation"
version = "0.1.0"
description = "RealWorld backend test automation using the Screenplay pattern"
authors = [
    {name = "Ariel Acosta", email = "jariel17@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5,<3.0.0",
]

[tool.poetry]
package-mode = true

[[tool.poetry.packages]]
include = "screenplay"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=9.0.1,<10.0.0",
    "ruff>=0.6.9,<1.0.0"
]


# -----------------------------
# Ruff configuration (lint + format)
# -----------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

exclude = [
  ".venv", "venv", "build", "dist",
  ".mypy_cache", ".pytest_cache", ".ruff_cache"
]

[tool.ruff.lint]
# Rule families to enable (broad but pragmatic)
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort (import sorting)
  "UP",   # pyupgrade
  "B",    # bugbear
  "W",    # warnings
  "C90",  # mccabe complexity
  "PT",   # pytest style
  "RUF",  # ruff-specific rules
]
ignore = [
  "E501",  # ignore line-length in lint; formatting handles wrapping
]

[tool.ruff.lint.isort]
known-first-party = ["screenplay"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
